--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.23.0",
     "zustand": "^4.5.2"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-outside-click-handler": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
